--- a/index.html
+++ b/index.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAM | home</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PAM | home</title>
+  <link rel="stylesheet" href="./styles/main.css">
+  <script src="./scripts/main.js" type="module" defer></script>
 </head>
+
 <body>
-    
+  <header class="header" data-js-header>
+    <div class="header__body container">
+        <a
+          class="header__logo logo"
+          href="/"
+          aria-label="Home"
+          title="Home">
+            <img
+              src="./images/logo.svg"
+              alt=""
+              width="120"
+              height="80"
+            >
+        </a>
+      <div class="header__navigation">
+        <div class="header__navigation-inner" data-js-header-navigation>
+          <nav class="header__menu">
+            <ul class="header__menu-list">
+              <li class="header__menu-item">
+                <a href="./index.html" class="header__menu-link is-active">HOME</a>
+              </li>
+              <li class="header__menu-item">
+                <a href="/" class="header__menu-link">ABOUT US</a>
+              </li>
+              <li class="header__menu-item">
+                <div class="select">
+                  <label class="select__label visually-hidden" for="various-services">SERVICES</label>
+                  <a href="/" class="select__link">SERVICES
+                    <span class="select__icon"></span>
+                  </a>
+                  <select id="various-services" tabindex="0">
+                    <option value="investments-opportunities">Investments opportunities</option>
+                    <option value="business-relocation">Business relocation</option>
+                    <option value="family-relocation">Family relocation</option>
+                  </select>
+                </div>
+              </li>
+              <li class="header__menu-item">
+                <a href="/" class="header__menu-link">INVEST IN CYPRUS</a>
+              </li>
+              <li class="header__menu-item">
+                <a href="/" class="header__menu-link">MIGRATION</a>
+              </li>
+              <li class="header__menu-item">
+                <a href="/" class="header__menu-link">CONTACT US</a>
+              </li>
+            </ul>
+          </nav>
+          <a href="/" class="header__get-in-touch button hidden-mobile-s">Get in touch</a>
+        </div>
+      <button
+        class="header__burger-button burger-button visible-tablet-l"
+        type="button"
+        aria-label="Open menu"
+        title="Open menu"
+        data-js-header-burger-button
+      >
+      <span class="burger-button__line"></span>
+      <span class="burger-button__line"></span>
+      <span class="burger-button__line"></span>
+
+        </button>
+      </div>
+      </div>
+  </header>
 </body>
+
 </html>
