--- a/index.html
+++ b/index.html
@@ -4,13 +4,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>eatly | home</title>
+  <title>Eatly | Home</title>
   <link rel="stylesheet" href="./styles/main.css">
   <script src="./scripts/main.js" type="module" defer></script>
 </head>
-
 <body>
+  <header class="header" data-js-header>
+    <div class="header__body container">
+      <div class="header__body-inner">
+        <a
+        class="header__logo logo"
+        href="/"
+        aria-label="Home"
+        title="Home"
+        >
+          <img
+            src="./images/logo.svg"
+            alt=""
+            class="logo__image"
+            width="110" height="42"
+            >
+      </a>
+      <div class="header__overlay" data-js-header-overlay>
+        <nav class="header__nav">
+          <ul class="header__nav-list">
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="/">Menu</a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="/">Blog</a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="/">Pricing</a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="/">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__authorization">
+          <a class="header__authorization-login" href="/">Login</a>
+          <a class="header__authorization-sign-up button" href="/">Sign up</a>
+        </div>
+      </div>
+      <button
+        class="header__burger-button burger-button visible-mobile"
+        type="button"
+        aria-label="Open menu"
+        title="Open menu"
+        data-js-header-burger-button
+        >
+        <span class="burger-button__line"></span>
+        <span class="burger-button__line"></span>
+        <span class="burger-button__line"></span>
+      </button>
+      </div>
+    </div>
+  </header>
+
+
+
 
 </body>
-
 </html>
