feat(top-restaurants):creating cards, moving abstract styles to a separate file and of course js logic

--- a/index.html
+++ b/index.html
@@ -274,6 +274,81 @@
      </div>
 
     </section>
+
+    <section class="top-restaurants" aria-labelledby="top-restaurants__title">
+      <div class="top-restaurants__body container overall-top">
+        <h2 class="top-restaurants__title" id="top-restaurants__title">Our Top <span class="overall-top__highlight">Restaurants</span></h2>
+        <ul class="top-restaurants__list">
+          <li class="top-restaurants__item">
+            <div class="top-restaurants__card">
+              <img
+              class="top-restaurants__card-image"
+              src="./images/top-restaurants/chicken.png"
+              alt=""
+              width="396" height="176">
+              <div class="top-restaurants__card-body" data-js-top-restaurants>
+                <span class="top-restaurants__card-badge">Healthy</span>
+                <h3 class="top-restaurants__card-title h4">The Chicken King</h3>
+                <div class="top-restaurants__card-meta">
+                    <div class="top-restaurants__card-meta-info">
+                      <span class="top-restaurants__card-time">24min •</span>
+                      <div class="top-restaurants__card-star is-active" data-js-top-restaurants-star></div>
+                      <span class="top-restaurants__card-rating">4.8</span>
+                    </div>
+                    <div class="top-restaurants__card-meta-favorites is-active" data-js-top-restaurants-favorite></div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="top-restaurants__item">
+            <div class="top-restaurants__card">
+              <img
+              class="top-restaurants__card-image"
+              src="./images/top-restaurants/burger.png"
+              alt=""
+              width="396" height="176">
+              <div class="top-restaurants__card-body" data-js-top-restaurants>
+                <span class="top-restaurants__card-badge top-restaurants__card-badge-red">Trending</span>
+                <h3 class="top-restaurants__card-title h4">The Burger King</h3>
+                <div class="top-restaurants__card-meta">
+                    <div class="top-restaurants__card-meta-info">
+                      <span class="top-restaurants__card-time">24min •</span>
+                      <div class="top-restaurants__card-star is-active" data-js-top-restaurants-star></div>
+                      <span class="top-restaurants__card-rating">4.9</span>
+                    </div>
+                    <div class="top-restaurants__card-meta-favorites is-active" data-js-top-restaurants-favorite>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="top-restaurants__item">
+            <div class="top-restaurants__card">
+              <img
+              class="top-restaurants__card-image"
+              src="./images/top-restaurants/chicken.png"
+              alt=""
+              width="396" height="176">
+              <div class="top-restaurants__card-body" data-js-top-restaurants>
+                <span class="top-restaurants__card-badge">Healthy</span>
+                <h3 class="top-restaurants__card-title h4">The Chicken King</h3>
+                <div class="top-restaurants__card-meta">
+                    <div class="top-restaurants__card-meta-info">
+                      <span class="top-restaurants__card-time">24min •</span>
+                      <div class="top-restaurants__card-star is-active" data-js-top-restaurants-star></div>
+                      <span class="top-restaurants__card-rating">4.8</span>
+                    </div>
+                    <div class="top-restaurants__card-meta-favorites is-active" data-js-top-restaurants-favorite></div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <a href="/" class="top-restaurants__link">
+          <span class="icon icon--right-arrow-gray">View All</span>
+        </a>
+      </div>
+    </section>
   </main>
 
 
