feat(say): implementation of scroll card logic, one fixed/static on devices larger than mobile, and on mobile all scrollable

--- a/index.html
+++ b/index.html
@@ -793,13 +793,257 @@
         </div>
       </div>
     </div>
+
   </section>
 
+<section class="say" aria-labelledby="say__title">
+  <div class="say__body container">
+    <h2 class="say__title" id="say__title"><span class="overall-top__highlight">Customer</span> Say</h2>
+    <div class="say__content">
+      <article
+        class="say__card say__card-fixed"
+        aria-label="Customer Say"
+        title="Customer Say"
+        data-js-say-fixed-card
+    >
+    <header class="say__header">
+      <div class="say__header-main">
+        <div class="say__header-inner">
+          <img
+            src="./images/say/ava-alex.png"
+            alt=""
+            class="say__avatar"
+            width="71" height="71"
+        >
+          <div class="say__info">
+           <h3 class="say__name">Alexander R.</h3>
+           <p class="say__duration">01 Year With Us </p>
+          </div>
+        </div>
+        <div class="say__quote-block">
+         <img
+           class="say__quote"
+           src="./icons/say/quote.svg"
+            alt=""
+            width="26.6" height="44.3"
+         >
+         <img
+            class="say__quote"
+            src="./icons/say/quote.svg"
+             alt=""
+            width="26.6" height="44.3"
+         >
+        </div>
+      </div>
+    </header>
+    <blockquote class="say__description">
+      <p>“ Online invoice payment helps companies save time, are faster and save maximum effort for the clients and save maximum effort. Online invoice payment helps companies save time ”</p>
+    </blockquote>
+    <div
+      class="say__rating"
+      aria-label="Rating 5 star"
+      title="Rating 5 star"
+    >
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+  </div>
+      </article>
+
+  <div class="say__mobile-container" data-js-say-mobile-container>
+    <article
+    class="say__card"
+    aria-label="Customer Say"
+    title="Customer Say"
+  >
+  <header class="say__header">
+    <div class="say__header-main">
+    <div class="say__header-inner">
+      <img
+        src="./images/say/ava-alex.png"
+        alt=""
+        class="say__avatar"
+        width="42.3" height="42.3"
+      >
+      <div class="say__info">
+        <h3 class="say__name">Alexander R.</h3>
+        <p class="say__duration">01 Year With Us </p>
+      </div>
+    </div>
+    <div class="say__quote-block">
+      <img
+        class="say__quote"
+        src="./icons/say/quote.svg"
+        alt=""
+        width="15.8" height="26.4"
+      >
+      <img
+        class="say__quote"
+        src="./icons/say/quote.svg"
+        alt=""
+        width="15.8" height="26.4"
+      >
+      </div>
+    </div>
+  </header>
+  <blockquote class="say__description">
+    <p>“ Online invoice payment helps companies save time, are faster and save maximum effort for the clients and save maximum effort. Online invoice payment helps companies save time ”</p>
+  </blockquote>
+  <div
+    class="say__rating"
+    aria-label="Rating 5 star"
+    title="Rating 5 star"
+  >
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  </div>
+  </article>
+  <article
+      class="say__card"
+      aria-label="Customer Say"
+      title="Customer Say"
+    >
+    <blockquote class="say__description say__description-light">
+      <p>“ Online invoice payment helps companies save time, are faster and save maximum effort for the clients and save maximum effort. Online invoice payment helps companies save time ”</p>
+    </blockquote>
+    <div
+      class="say__rating"
+      aria-label="Rating 5 star"
+      title="Rating 5 star"
+    >
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+  </div>
+  </article>
+  <article
+      class="say__card"
+      aria-label="Customer Say"
+      title="Customer Say"
+    >
+    <blockquote class="say__description say__description-light">
+      <p>“ Online invoice payment helps companies save time, are faster and save maximum effort for the clients and save maximum effort. Online invoice payment helps companies save time ”</p>
+    </blockquote>
+    <div
+      class="say__rating"
+      aria-label="Rating 5 star"
+      title="Rating 5 star"
+    >
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+  </div>
+  </article>
+  <article
+      class="say__card"
+      aria-label="Customer Say"
+      title="Customer Say"
+    >
+    <blockquote class="say__description say__description-light">
+      <p>“ Online invoice payment helps companies save time, are faster and save maximum effort for the clients and save maximum effort. Online invoice payment helps companies save time ”</p>
+    </blockquote>
+    <div
+      class="say__rating"
+      aria-label="Rating 5 star"
+      title="Rating 5 star"
+    >
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+  </div>
+  </article>
+  </div>
+
+  <div
+    class="say__scroll-wrapper"
+    aria-label="Customer Say"
+    title="Customer Say"
+    data-js-say-desktop-wrapper
+  >
+  <div class="say__scroll" data-js-say-desktop-scroll>
+    <article
+      class="say__card"
+      aria-label="Customer Say"
+      title="Customer Say"
+    >
+    <blockquote class="say__description say__description-light">
+      <p>“ Online invoice payment helps companies save time, are faster and save maximum effort for the clients and save maximum effort. Online invoice payment helps companies save time ”</p>
+    </blockquote>
+    <div
+      class="say__rating"
+      aria-label="Rating 5 star"
+      title="Rating 5 star"
+    >
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+    <div class="say__rating-star is-active"></div>
+  </div>
+  </article>
+  <article
+    class="say__card"
+    aria-label="Customer Say"
+    title="Customer Say"
+  >
+  <blockquote class="say__description say__description-light">
+    <p>“ Online invoice payment helps companies save time, are faster and save maximum effort for the clients and save maximum effort. Online invoice payment helps companies save time ”</p>
+  </blockquote>
+  <div
+    class="say__rating"
+    aria-label="Rating 5 star"
+    title="Rating 5 star"
+  >
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  </div>
+  </article>
+  <article
+    class="say__card"
+    aria-label="Customer Say"
+    title="Customer Say"
+  >
+  <blockquote class="say__description say__description-light">
+    <p>“ Online invoice payment helps companies save time, are faster and save maximum effort for the clients and save maximum effort. Online invoice payment helps companies save time ”</p>
+  </blockquote>
+  <div
+    class="say__rating"
+    aria-label="Rating 5 star"
+    title="Rating 5 star"
+  >
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  <div class="say__rating-star is-active"></div>
+  </div>
+  </article>
+  </div>
+
+  <div class="say__scrollbar" aria-hidden="true">
+    <div class="say__progress" data-js-say-progress></div>
+  </div>
+</div>
+</div>
+</div>
+
+</section>
 
 
-  </main>
-
-
+</main>
 </body>
-
 </html>
