feat(get-discount): creating a small block with an input field, logic for changing placeholder on mobile, positioning the image of a dish

--- a/index.html
+++ b/index.html
@@ -1040,10 +1040,36 @@
 </div>
 </div>
 </div>
-
 </section>
 
+<section class="get-discount container" aria-labelledby="get-discount__title">
+  <div class="get-discount__container">
+    <div class="get-discount__info">
+      <h2 class="get-discount__title" id="get-discount__title">GET 50%</h2>
+      <div class="get-discount__subscribe">
+          <label class="get-discount__label visually-hidden" for="email">Email</label>
+          <input
+            class="get-discount__field"
+            id="email"
+            placeholder="Enter Your Email Address"
+            type="email"
+            required
+            data-js-get-discount-field
+          >
+          <button class="get-discount__button button" type="submit">subscribe</button>
+      </div>
+    </div>
+    <img
+    class="get-discount__image"
+    src="./images/top-dishes/swe-dish-1.png"
+    alt=""
+    width="274"
+    height="276"
+    >
+  </div>
+</section>
 
+<p>erredsfr</p>
 </main>
 </body>
 </html>
