feat(hero-alt): positioned elements using a grid, logic for switching tabs and automatic content refreshing, a slider that can be swiped with a mouse or finger movement, click on the line below or automatically refreshed every 3 seconds

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header class="header" data-js-header>
     <div class="header__body container">
       <div class="header__body-inner">
-        <a class="header__logo logo"
-          href="/"
+        <a class="header__logo logo is-active"
+          href="/index.html"
           aria-label="Home"
           title="Home">
           <img src="./images/logo.svg"
@@ -26,7 +26,7 @@
           <nav class="header__nav">
             <ul class="header__nav-list">
               <li class="header__nav-item">
-                <a class="header__nav-link" href="/">Menu</a>
+                <a class="header__nav-link" href="/menu.html">Menu</a>
               </li>
               <li class="header__nav-item">
                 <a class="header__nav-link" href="/">Blog</a>
@@ -1074,7 +1074,7 @@
     <div class="footer__body">
      <div class="footer__body-inner">
        <div class="footer__body-inner-mobile">
-        <a class="footer__logo logo"
+        <a class="footer__logo logo is-active"
         href="/"
         aria-label="Home"
         title="Home">
